# arma3-attendance

./: .gitignore  CMakeLists.txt  README.md  hemtt.json
.github/workflows/: build.yml  build_release.yml  release.yml
.hemtt/: hemtt.toml  project.toml
@attendance_bot/: mod.cpp
@attendance_bot/addons/attendance_bot/: config.cpp  config.hpp.example  config.json.example  init.sqf
@attendance_bot/addons/attendance_bot/scripts/: fn_init.sqf  init.sqf
@attendance_bot/keys/: readme.txt
include/: config.h  configfile.h  extension.h  httprequest.h  queue.h  utils.h
scripts/: config.sqf  fn_init.sqf  init.sqf
src/: config.cpp  configfile.cpp  extension.cpp  httprequest.cpp  queue.cpp  utils.cpp
tools/: config.hpp.example  config.json.example  create_release.sh  pack_pbo.sh
